fixed spacing with nav icons

--- a/App.css
+++ b/App.css
@@ -54,7 +54,7 @@
 }
 
 .nav-icon {
-  padding: 0 0.4rem;
+  padding: 0 0.8rem;
   color: white;
 }
 
